--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
           </div>
           <div class="event">
               <div class="event-image-container">
-                <a href="https://csorw4231-14.wikischolars.columbia.edu/" target="_blank"><img class="event-image" alt="algorithms" src="img/algo.png"></a>
+                <a href="https://www.lyft.com" target="_blank"><img class="event-image" alt="lyft" src="img/lyft.jpg"></a>
               </div>
-              <div class="event-description"><p>Teaching Assistant</p><p>Spring 2017</p>
+              <div class="event-description"><p>Software Engineering Intern</p><p>Summer 2017</p>
               </div>
           </div>
           <div class="event">
               <div class="event-image-container">
-                <a href="https://www.lyft.com" target="_blank"><img class="event-image" alt="lyft" src="img/lyft.jpg"></a>
+                <a href="https://csorw4231-14.wikischolars.columbia.edu/" target="_blank"><img class="event-image" alt="algorithms" src="img/algo.png"></a>
               </div>
-              <div class="event-description"><p>Software Engineering Intern</p><p>Summer 2017</p>
+              <div class="event-description"><p>Teaching Assistant</p><p>Spring 2017</p>
               </div>
           </div>
           <div class="event">
@@ -132,7 +132,7 @@
           </div>
           <div class="card-details-container">
             <div class="card-title"><a href="http://raymondxu.io/pseudo.pdf" class="link">Pseudo</a></div>
-            <div class="card-desc">An algorithm design language with Pythonic syntax and a novel object inference algorithm. Written in OCaml and compiles programs to LLVM.</div>
+            <div class="card-desc">Pseudo is an algorithm design language featuring a novel object inference algorithm built on top of the Hindley-Milner type system. The compiler is written in OCaml and compiles Pseudo programs to LLVM.</div>
           </div>
         </div>
 
