--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
       <!-- About -->
       <div id="about-div" class="tab iter">
-        <p>Hey! I'm Raymond Xu, a junior studying Computer Science at Columbia University. I love building apps, thinking about pedagogy, and optimizing life. At school, I help run <a href="http://www.adicu.com" class="colored-link" target="_blank">ADI</a> and <a href="http://www.devfe.st" class="colored-link" target="_blank">DevFest</a>. I also write on <a href="https://www.medium.com/@raymondxu" class="colored-link" target="_blank">Medium</a>.</p>
+        <p>Hey! I'm Raymond Xu, a junior studying Computer Science at Columbia University. I love building apps, teaching, and optimizing life. At school, I help run <a href="http://www.adicu.com" class="colored-link" target="_blank">ADI</a> and <a href="http://www.devfe.st" class="colored-link" target="_blank">DevFest</a>. I also write on <a href="https://www.medium.com/@raymondxu" class="colored-link" target="_blank">Medium</a>.</p>
         <div class="divide"><hr></div>
         <div class="container">
           <div class="event">
@@ -78,7 +78,7 @@
           </div>
           <div class="event">
               <div class="event-image-container">
-                <a href="https://csorw4231-14.wikischolars.columbia.edu/" target="_blank"><img class="event-image" alt="algorithms" src="img/algo.png"></a>
+                <a href="https://csorw4231-14.wikischolars.columbia.edu/Spring+2017" target="_blank"><img class="event-image" alt="algorithms" src="img/algo.png"></a>
               </div>
               <div class="event-description"><p>Teaching Assistant</p><p>Spring 2017</p>
               </div>
