--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
       <!-- About -->
       <div id="about-div" class="tab iter">
-        <p>Hey! I'm Raymond Xu, a junior studying Computer Science at Columbia University. I love building apps, teaching, and optimizing life. At school, I help run <a href="http://www.adicu.com" class="colored-link" target="_blank">ADI</a> and <a href="http://www.devfe.st" class="colored-link" target="_blank">DevFest</a>. I also write on <a href="https://www.medium.com/@raymondxu" class="colored-link" target="_blank">Medium</a>.</p>
+        <p>Hey! I'm Raymond Xu, a senior studying Computer Science at Columbia University. I love building products, teaching, and optimizing life. At school, I help run <a href="http://www.adicu.com" class="colored-link" target="_blank">ADI</a> and <a href="http://www.devfe.st" class="colored-link" target="_blank">DevFest</a>. Let's connect!</p>
         <div class="divide"><hr></div>
         <div class="container">
           <div class="event">
