Add Systems in 60 Minutes talk description

--- a/index.html
+++ b/index.html
@@ -161,6 +161,16 @@
       <div id="talks-div" class="iter">
         <div class="card">
           <div class="card-image-container">
+            <a href="http://raymondxu.io/systems.pdf"><img src="img/systems.png" class="card-image"></a>
+          </div>
+          <div class="card-details-container">
+            <div class="card-title"><a href="http://raymondxu.io/systems.pdf" class="link">Systems in 60 Minutes</a></div>
+            <div class="card-desc">Systems in 60 Minutes is a whirlwind tour of how computers and networks work. The talk also presents practical and pedagogical approaches to understanding complex systems.</div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image-container">
             <a href="http://raymondxu.io/dp.pdf"><img src="img/dp.png" class="card-image"></a>
           </div>
           <div class="card-details-container">
