--- a/index.html
+++ b/index.html
@@ -3,28 +3,45 @@
 
 <head>
   <!-- Even this Acronym -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <meta name="author" content="Raymond Xu">
-  <meta name="description" content="Raymond Xu is a Computer Science student at Columbia University with a strong interest in software engineering and product development.">
-  <meta name="robots" content="NOODP, index, follow" />
   <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
-  <meta name="twitter:card" content="summary">
-  <meta property="og:url" content="http://raymondxu.io" />
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="Raymond Xu" />
-  <meta property="og:description" content="Raymond Xu is a Computer Science student at Columbia University with a strong interest in software engineering and product development" />
-  <meta property="og:image" content="http://raymondxu.io/img/landing.png" />
+
+  <meta charset="utf-8">
+  <meta name="robots" content="NOODP, index, follow" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+
   <title>Raymond Xu</title>
+  <meta name="author" content="Raymond Xu">
+  <meta name="description" content="Raymond Xu is a Computer Science student at Columbia University with a strong interest in software engineering and product development.">
+
+  <!-- Google / Search Engine Tags -->
+  <meta itemprop="name" content="Raymond Xu">
+  <meta itemprop="description" content="Raymond Xu is a Computer Science student at Columbia University with a strong interest in software engineering and product development.">
+  <meta itemprop="image" content="http://raymondxu.io/img/landing.png">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="http://www.raymondxu.io">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Raymond Xu">
+  <meta property="og:description" content="Raymond Xu is a Computer Science student at Columbia University with a strong interest in software engineering and product development.">
+  <meta property="og:image" content="http://raymondxu.io/img/landing.png">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Raymond Xu">
+  <meta name="twitter:description" content="Raymond Xu is a Computer Science student at Columbia University with a strong interest in software engineering and product development.">
+  <meta name="twitter:image" content="http://raymondxu.io/img/landing.png">
+
   <!-- Stylesheets -->
   <link href="css/base.css" rel="stylesheet" type="text/css">
   <link href="css/timeline.css" rel="stylesheet" type="text/css">
   <link href="css/cards.css" rel="stylesheet" type="text/css">
+
   <!-- Fonts -->
   <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   <script src="https://use.fontawesome.com/c91c862a08.js"></script>
+  
   <!-- Analytics -->
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
