--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
             <div class="event-image-container">
               <a href="http://www.adicu.com" target="_blank"><img class="event-image" alt="adi" src="img/adi.png"></a>
             </div>
-            <div class="event-description"><p>Education Head</p><p>2014 - Present</p>
+            <div class="event-description"><p>Education Head</p><p>2014 - 2018</p>
             </div>
           </div>
           <div class="event">
             <div class="event-image-container">
               <a href="http://devfe.st" target="_blank"><img class="event-image" alt="devfest" src="img/devfest.png"></a>
             </div>
-            <div class="event-description"><p>Lead Director</p><p>2015 - Present</p>
+            <div class="event-description"><p>Director</p><p>2015 - 2017</p>
             </div>
           </div>
           <div class="event">
