--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="Raymond Xu">
   <meta itemprop="description" content="Raymond Xu is a Computer Science student at Columbia University with a strong interest in software engineering and product development.">
-  <meta itemprop="image" content="http://raymondxu.io/img/landing.png">
+  <meta itemprop="image" content="https://raymondxu.io/img/landing.png">
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="http://www.raymondxu.io">
+  <meta property="og:url" content="https://www.raymondxu.io">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Raymond Xu">
   <meta property="og:description" content="Raymond Xu is a Computer Science student at Columbia University with a strong interest in software engineering and product development.">
-  <meta property="og:image" content="http://raymondxu.io/img/landing.png">
+  <meta property="og:image" content="https://raymondxu.io/img/landing.png">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Raymond Xu">
   <meta name="twitter:description" content="Raymond Xu is a Computer Science student at Columbia University with a strong interest in software engineering and product development.">
-  <meta name="twitter:image" content="http://raymondxu.io/img/landing.png">
+  <meta name="twitter:image" content="https://raymondxu.io/img/landing.png">
 
   <!-- Stylesheets -->
   <link href="css/base.css" rel="stylesheet" type="text/css">
@@ -38,8 +38,8 @@
   <link href="css/cards.css" rel="stylesheet" type="text/css">
 
   <!-- Fonts -->
-  <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   <script src="https://use.fontawesome.com/c91c862a08.js"></script>
   
   <!-- Analytics -->
@@ -76,12 +76,12 @@
 
       <!-- About -->
       <div id="about-div" class="tab iter">
-        <p>Hey! I'm Raymond Xu, a senior studying Computer Science at Columbia University. I love building products, teaching, and optimizing life. At school, I help run <a href="http://www.adicu.com" class="colored-link" target="_blank">ADI</a> and <a href="http://www.devfe.st" class="colored-link" target="_blank">DevFest</a>. Let's connect!</p>
+        <p>Hey! I'm Raymond Xu, a senior studying Computer Science at Columbia University. I love building products, teaching, and optimizing life. At school, I help run <a href="https://www.adicu.com" class="colored-link" target="_blank">ADI</a> and <a href="https://www.devfe.st" class="colored-link" target="_blank">DevFest</a>. Let's connect!</p>
         <div class="divide"><hr></div>
         <div class="container">
           <div class="event">
             <div class="event-image-container">
-              <a href="http://www.cs.columbia.edu" target="_blank"><img class="event-image" alt="columbia" src="img/seas.png"></a>
+              <a href="https://www.cs.columbia.edu" target="_blank"><img class="event-image" alt="columbia" src="img/seas.png"></a>
             </div>
             <div class="event-description"><p>B.S. Computer Science</p><p>2014 - 2018</p>
             </div>
@@ -102,28 +102,28 @@
           </div>
           <div class="event">
             <div class="event-image-container">
-              <a href="http://www.google.com" target="_blank"><img class="event-image" alt="google" src="img/google.jpg"></a>
+              <a href="https://www.google.com" target="_blank"><img class="event-image" alt="google" src="img/google.jpg"></a>
             </div>
             <div class="event-description"><p>Software Engineering Intern</p><p>Summer 2016</p>
             </div>
           </div>
           <div class="event">
             <div class="event-image-container">
-              <a href="http://www.adicu.com" target="_blank"><img class="event-image" alt="adi" src="img/adi.png"></a>
+              <a href="https://www.adicu.com" target="_blank"><img class="event-image" alt="adi" src="img/adi.png"></a>
             </div>
             <div class="event-description"><p>Education Head</p><p>2014 - 2018</p>
             </div>
           </div>
           <div class="event">
             <div class="event-image-container">
-              <a href="http://devfe.st" target="_blank"><img class="event-image" alt="devfest" src="img/devfest.png"></a>
+              <a href="https://devfe.st" target="_blank"><img class="event-image" alt="devfest" src="img/devfest.png"></a>
             </div>
             <div class="event-description"><p>Director</p><p>2015 - 2017</p>
             </div>
           </div>
           <div class="event">
             <div class="event-image-container">
-              <a href="http://www.paypal.com" target="_blank"><img class="event-image" alt="paypal" src="img/paypal.jpg"></a>
+              <a href="https://www.paypal.com" target="_blank"><img class="event-image" alt="paypal" src="img/paypal.jpg"></a>
             </div>
             <div class="event-description"><p>Software Engineering Intern</p><p>Summer 2015</p>
             </div>
@@ -168,7 +168,7 @@
             <a href="http://density.adicu.com"><img src="img/density.png" class="card-image"></a>
           </div>
           <div class="card-details-container">
-            <div class="card-title"><a href="http://density.adicu.com" class="link">Density</a></div>
+            <div class="card-title"><a href="https://density.adicu.com" class="link">Density</a></div>
             <div class="card-desc">Density is a Flask app that estimates how full study spaces around campus are using Wi-Fi data. Developed with a team in <a href="https://adicu.com/labs" class="underlined-link" target="_blank">ADI Labs</a>.</div>
           </div>
         </div>
@@ -212,7 +212,7 @@
           </div>
           <div class="card-details-container">
             <div class="card-title"><a href="http://raymondxu.io/algorithms.pdf" class="link">Algorithms for Interviews</a></div>
-            <div class="card-desc">The sequel to <a href="http://www.raymondxu.io/datastructures.pdf" class="underlined-link" target="_blank">Data Structures for Interviews</a>, this talk explores sorting, recursion, greedy algorithms, and dynamic programming.</div>
+            <div class="card-desc">The sequel to <a href="https://www.raymondxu.io/datastructures.pdf" class="underlined-link" target="_blank">Data Structures for Interviews</a>, this talk explores sorting, recursion, greedy algorithms, and dynamic programming.</div>
           </div>
         </div>
 
@@ -222,7 +222,7 @@
           </div>
           <div class="card-details-container">
             <div class="card-title"><a href="http://raymondxu.io/hackcon16.pdf" class="link">5 Steps for Effective Education at Hackathons</a></div>
-            <div class="card-desc">I gave this workshop at <a href="http://www.hackcon.io" class="underlined-link" target="_blank">HackCon IV</a> to an audience of 70 hackathon organizers from around the nation. It details a methodology for constructing effective educational models for hackathons and explains the importance of thoughtful iteration.</div>
+            <div class="card-desc">I gave this workshop at <a href="https://www.hackcon.io" class="underlined-link" target="_blank">HackCon IV</a> to an audience of 70 hackathon organizers from around the nation. It details a methodology for constructing effective educational models for hackathons and explains the importance of thoughtful iteration.</div>
           </div>
         </div>
 
@@ -238,11 +238,11 @@
 
         <div class="card">
           <div class="card-image-container">
-            <a href="https://learn.devfe.st/webdev"><img src="img/webdev.png" class="card-image"></a>
+            <a href="http://learn.devfe.st/webdev"><img src="img/webdev.png" class="card-image"></a>
           </div>
           <div class="card-details-container">
             <div class="card-title"><a href="https://learn.devfe.st/webdev" class="link">Web Development with Flask</a></div>
-            <div class="card-desc">I co-authored this original curriculum for <a href="http://devfe.st" class="underlined-link" target="_blank">DevFest</a>, <a href="http://adicu.com" class="underlined-link" target="_blank">ADI</a>'s week-long workshop series and hackathon. This comprehensive tutorial teaches web development by guiding students through the process of building a reading list app using Flask. Read more about the DevFest Track System and its educational methodology <a href="https://medium.com/stories-from-adi/rethinking-education-at-devfest-d5fac7c303be" class="underlined-link" target="_blank">here</a></div>
+            <div class="card-desc">I co-authored this original curriculum for <a href="https://devfe.st" class="underlined-link" target="_blank">DevFest</a>, <a href="https://adicu.com" class="underlined-link" target="_blank">ADI</a>'s week-long workshop series and hackathon. This comprehensive tutorial teaches web development by guiding students through the process of building a reading list app using Flask. Read more about the DevFest Track System and its educational methodology <a href="https://medium.com/stories-from-adi/rethinking-education-at-devfest-d5fac7c303be" class="underlined-link" target="_blank">here</a></div>
           </div>
         </div>
       
@@ -273,6 +273,6 @@
 </body>
 
 <!-- JavaScript -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
 <script src="js/core.js"></script>
 </html>
