--- a/index.html
+++ b/index.html
@@ -135,6 +135,16 @@
       <div id="projects-div" class="iter">
         <div class="card">
           <div class="card-image-container">
+            <a href="https://snoozer.io"><img src="img/snoozer.png" class="card-image"></a>
+          </div>
+          <div class="card-details-container">
+            <div class="card-title"><a href="https://snoozer.io" class="link">Snoozer</a></div>
+            <div class="card-desc">Snoozer is a Chrome extension that lets you snooze conversations on messenger.com.</div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image-container">
             <a href="http://pokerchips.io"><img src="img/pokerchips.png" class="card-image"></a>
           </div>
           <div class="card-details-container">
