New timeline styles. Add lyft

--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
 
   <title>Raymond Xu</title>
   <meta name="author" content="Raymond Xu">
-  <meta name="description" content="Raymond Xu is a Computer Science student at Columbia University with a strong interest in software engineering and product development.">
+  <meta name="description" content="Software Engineer at Lyft. Previously CS at Columbia, Education at ADI.">
 
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="Raymond Xu">
-  <meta itemprop="description" content="Raymond Xu is a Computer Science student at Columbia University with a strong interest in software engineering and product development.">
+  <meta itemprop="description" content="Software Engineer at Lyft. Previously CS at Columbia, Education at ADI..">
   <meta itemprop="image" content="https://raymondxu.io/img/landing.png">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://www.raymondxu.io">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Raymond Xu">
-  <meta property="og:description" content="Raymond Xu is a Computer Science student at Columbia University with a strong interest in software engineering and product development.">
+  <meta property="og:description" content="Software Engineer at Lyft. Previously CS at Columbia, Education at ADI.">
   <meta property="og:image" content="https://raymondxu.io/img/landing.png">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Raymond Xu">
-  <meta name="twitter:description" content="Raymond Xu is a Computer Science student at Columbia University with a strong interest in software engineering and product development.">
+  <meta name="twitter:description" content="Software Engineer at Lyft. Previously CS at Columbia, Education at ADI.">
   <meta name="twitter:image" content="https://raymondxu.io/img/landing.png">
 
   <!-- Stylesheets -->
@@ -40,6 +40,7 @@
   <!-- Fonts -->
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <script src="https://use.fontawesome.com/c91c862a08.js"></script>
   
   <!-- Analytics -->
@@ -76,56 +77,61 @@
 
       <!-- About -->
       <div id="about-div" class="tab iter">
-        <p>Hey! I'm Raymond Xu, a senior studying Computer Science at Columbia University. I love building products, teaching, and optimizing life. At school, I help run <a href="https://www.adicu.com" class="colored-link" target="_blank">ADI</a> and <a href="https://www.devfe.st" class="colored-link" target="_blank">DevFest</a>. Let's connect!</p>
-        <div class="divide"><hr></div>
         <div class="container">
+          <div class="event">
+            <div class="event-image-container">
+              <a href="https://www.lyft.com" target="_blank"><img class="event-image" alt="lyft" src="img/lyft.jpg"></a>
+            </div>
+            <div class="event-description"><p>Software Engineer</p><p class="event-date">2018 - Present</p>
+            </div>
+          </div>
           <div class="event">
             <div class="event-image-container">
               <a href="https://www.cs.columbia.edu" target="_blank"><img class="event-image" alt="columbia" src="img/seas.png"></a>
             </div>
-            <div class="event-description"><p>B.S. Computer Science</p><p>2014 - 2018</p>
+            <div class="event-description"><p>B.S. Computer Science</p><p class="event-date">2014 - 2018</p>
             </div>
           </div>
           <div class="event">
               <div class="event-image-container">
                 <a href="https://www.lyft.com" target="_blank"><img class="event-image" alt="lyft" src="img/lyft.jpg"></a>
               </div>
-              <div class="event-description"><p>Software Engineering Intern</p><p>Summer 2017</p>
+              <div class="event-description"><p>Software Engineering Intern</p><p class="event-date">Summer 2017</p>
               </div>
           </div>
           <div class="event">
               <div class="event-image-container">
                 <a href="https://csorw4231-14.wikischolars.columbia.edu/Spring+2017" target="_blank"><img class="event-image" alt="algorithms" src="img/algo.png"></a>
               </div>
-              <div class="event-description"><p>Teaching Assistant</p><p>Spring 2017</p>
+              <div class="event-description"><p>Teaching Assistant</p><p class="event-date">Spring 2017</p>
               </div>
           </div>
           <div class="event">
             <div class="event-image-container">
               <a href="https://www.google.com" target="_blank"><img class="event-image" alt="google" src="img/google.jpg"></a>
             </div>
-            <div class="event-description"><p>Software Engineering Intern</p><p>Summer 2016</p>
+            <div class="event-description"><p>Software Engineering Intern</p><p class="event-date">Summer 2016</p>
             </div>
           </div>
           <div class="event">
             <div class="event-image-container">
               <a href="https://www.adicu.com" target="_blank"><img class="event-image" alt="adi" src="img/adi.png"></a>
             </div>
-            <div class="event-description"><p>Education Head</p><p>2014 - 2018</p>
+            <div class="event-description"><p>Education Head</p><p class="event-date">2014 - 2018</p>
             </div>
           </div>
           <div class="event">
             <div class="event-image-container">
               <a href="https://devfe.st" target="_blank"><img class="event-image" alt="devfest" src="img/devfest.png"></a>
             </div>
-            <div class="event-description"><p>Director</p><p>2015 - 2017</p>
+            <div class="event-description"><p>Director</p><p class="event-date">2015 - 2017</p>
             </div>
           </div>
           <div class="event">
             <div class="event-image-container">
               <a href="https://www.paypal.com" target="_blank"><img class="event-image" alt="paypal" src="img/paypal.jpg"></a>
             </div>
-            <div class="event-description"><p>Software Engineering Intern</p><p>Summer 2015</p>
+            <div class="event-description"><p>Software Engineering Intern</p><p class="event-date">Summer 2015</p>
             </div>
           </div>
         </div>
