--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
       <div id="projects-div" class="iter">
         <div class="card">
           <div class="card-image-container">
-            <a href="https://snoozer.io"><img src="img/snoozer.png" class="card-image"></a>
+            <a href="https://chrome.google.com/webstore/detail/snoozer/mhepbnfcmeddaoldehjcamapgjbjcfhi"><img src="img/snoozer.png" class="card-image"></a>
           </div>
           <div class="card-details-container">
-            <div class="card-title"><a href="https://snoozer.io" class="link">Snoozer</a></div>
+            <div class="card-title"><a href="https://chrome.google.com/webstore/detail/snoozer/mhepbnfcmeddaoldehjcamapgjbjcfhi" class="link">Snoozer</a></div>
             <div class="card-desc">Snoozer is a Chrome extension that lets you snooze conversations on messenger.com.</div>
           </div>
         </div>
