--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="Raymond Xu">
-  <meta itemprop="description" content="Software Engineer at Lyft. Previously CS at Columbia, Education at ADI..">
+  <meta itemprop="description" content="Software Engineer at Lyft. Previously CS at Columbia, Education at ADI.">
   <meta itemprop="image" content="https://raymondxu.io/img/landing.png">
 
   <!-- Facebook Meta Tags -->
@@ -82,7 +82,7 @@
             <div class="event-image-container">
               <a href="https://www.lyft.com" target="_blank"><img class="event-image" alt="lyft" src="img/lyft.jpg"></a>
             </div>
-            <div class="event-description"><p>Software Engineer</p><p class="event-date">2018 - Present</p>
+            <div class="event-description"><p>Software Engineer</p><p class="event-date">2017 - 2023</p>
             </div>
           </div>
           <div class="event">
@@ -91,13 +91,6 @@
             </div>
             <div class="event-description"><p>B.S. Computer Science</p><p class="event-date">2014 - 2018</p>
             </div>
-          </div>
-          <div class="event">
-              <div class="event-image-container">
-                <a href="https://www.lyft.com" target="_blank"><img class="event-image" alt="lyft" src="img/lyft.jpg"></a>
-              </div>
-              <div class="event-description"><p>Software Engineering Intern</p><p class="event-date">Summer 2017</p>
-              </div>
           </div>
           <div class="event">
               <div class="event-image-container">
@@ -110,7 +103,7 @@
             <div class="event-image-container">
               <a href="https://www.google.com" target="_blank"><img class="event-image" alt="google" src="img/google.jpg"></a>
             </div>
-            <div class="event-description"><p>Software Engineering Intern</p><p class="event-date">Summer 2016</p>
+            <div class="event-description"><p>Software Engineering Intern</p><p class="event-date">2016</p>
             </div>
           </div>
           <div class="event">
@@ -122,7 +115,7 @@
           </div>
           <div class="event">
             <div class="event-image-container">
-              <a href="https://devfe.st" target="_blank"><img class="event-image" alt="devfest" src="img/devfest.png"></a>
+              <a href="https://adicu.com" target="_blank"><img class="event-image" alt="devfest" src="img/devfest.png"></a>
             </div>
             <div class="event-description"><p>Director</p><p class="event-date">2015 - 2017</p>
             </div>
@@ -131,7 +124,7 @@
             <div class="event-image-container">
               <a href="https://www.paypal.com" target="_blank"><img class="event-image" alt="paypal" src="img/paypal.jpg"></a>
             </div>
-            <div class="event-description"><p>Software Engineering Intern</p><p class="event-date">Summer 2015</p>
+            <div class="event-description"><p>Software Engineering Intern</p><p class="event-date">2015</p>
             </div>
           </div>
         </div>
@@ -175,7 +168,7 @@
           </div>
           <div class="card-details-container">
             <div class="card-title"><a href="https://density.adicu.com" class="link">Density</a></div>
-            <div class="card-desc">Density is a Flask app that estimates how full study spaces around campus are using Wi-Fi data. Developed with a team in <a href="https://adicu.com/labs" class="underlined-link" target="_blank">ADI Labs</a>.</div>
+            <div class="card-desc">Density is a Flask app that estimates how full study spaces around campus are using Wi-Fi data. Developed with a team in <a href="https://www.adicu.com/adi-labs" class="underlined-link" target="_blank">ADI Labs</a>.</div>
           </div>
         </div>
       </div>
@@ -238,18 +231,18 @@
           </div>
           <div class="card-details-container">
             <div class="card-title"><a href="http://raymondxu.io/datastructures.pdf" class="link">Data Structures for Interviews</a></div>
-            <div class="card-desc">I give this talk at Columbia every fall during interview season. It miraculously packs a semester's worth of content from a data structures class into one hour.</div>
+            <div class="card-desc">I gave this talk at Columbia every fall during interview season. It miraculously packs a semester's worth of content from a data structures class into one hour.</div>
           </div>
         </div>
 
         <div class="card">
           <div class="card-image-container">
-            <a href="http://learn.devfe.st/webdev"><img src="img/webdev.png" class="card-image"></a>
+            <a href="https://github.com/raymondxu/devfest-webdev-track"><img src="img/webdev.png" class="card-image"></a>
           </div>
           <div class="card-details-container">
-            <div class="card-title"><a href="https://learn.devfe.st/webdev" class="link">Web Development with Flask</a></div>
-            <div class="card-desc">I co-authored this original curriculum for <a href="https://devfe.st" class="underlined-link" target="_blank">DevFest</a>, <a href="https://adicu.com" class="underlined-link" target="_blank">ADI</a>'s week-long workshop series and hackathon. This comprehensive tutorial teaches web development by guiding students through the process of building a reading list app using Flask. Read more about the DevFest Track System and its educational methodology <a href="https://medium.com/stories-from-adi/rethinking-education-at-devfest-d5fac7c303be" class="underlined-link" target="_blank">here</a></div>
-          </div>
+            <div class="card-title"><a href="https://github.com/raymondxu/devfest-webdev-track" class="link">Web Development with Flask</a></div>
+            <div class="card-desc">I co-authored this original curriculum for 
+          </div>DevFest, <a href="https://adicu.com" class="underlined-link" target="_blank">ADI</a>'s week-long workshop series and hackathon. This comprehensive tutorial teaches web development by guiding students through the process of building a reading list app using Flask. Read more about the DevFest Track System and its educational methodology <a href="https://medium.com/stories-from-adi/rethinking-education-at-devfest-d5fac7c303be" class="underlined-link" target="_blank">here</a></div>
         </div>
       
         <div class="card">
