--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <div class="event-image-container">
                 <a href="https://csorw4231-14.wikischolars.columbia.edu/Spring+2017" target="_blank"><img class="event-image" alt="algorithms" src="img/algo.png"></a>
               </div>
-              <div class="event-description"><p>Teaching Assistant</p><p class="event-date">Spring 2017</p>
+              <div class="event-description"><p>Teaching Assistant</p><p class="event-date">2017</p>
               </div>
           </div>
           <div class="event">
