--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="event-image-container">
               <a href="https://www.google.com" target="_blank"><img class="event-image" alt="google" src="img/google.jpg"></a>
             </div>
-            <div class="event-description"><p>Software Engineering Intern</p><p class="event-date">2016</p>
+            <div class="event-description"><p>Software Engineer</p><p class="event-date">2016</p>
             </div>
           </div>
           <div class="event">
@@ -118,13 +118,6 @@
               <a href="https://adicu.com" target="_blank"><img class="event-image" alt="devfest" src="img/devfest.png"></a>
             </div>
             <div class="event-description"><p>Director</p><p class="event-date">2015 - 2017</p>
-            </div>
-          </div>
-          <div class="event">
-            <div class="event-image-container">
-              <a href="https://www.paypal.com" target="_blank"><img class="event-image" alt="paypal" src="img/paypal.jpg"></a>
-            </div>
-            <div class="event-description"><p>Software Engineering Intern</p><p class="event-date">2015</p>
             </div>
           </div>
         </div>
@@ -241,17 +234,7 @@
           </div>
           <div class="card-details-container">
             <div class="card-title"><a href="https://github.com/raymondxu/devfest-webdev-track" class="link">Web Development with Flask</a></div>
-            <div class="card-desc">I co-authored this original curriculum for 
-          </div>DevFest, <a href="https://adicu.com" class="underlined-link" target="_blank">ADI</a>'s week-long workshop series and hackathon. This comprehensive tutorial teaches web development by guiding students through the process of building a reading list app using Flask. Read more about the DevFest Track System and its educational methodology <a href="https://medium.com/stories-from-adi/rethinking-education-at-devfest-d5fac7c303be" class="underlined-link" target="_blank">here</a></div>
-        </div>
-      
-        <div class="card">
-          <div class="card-image-container">
-            <a href="https://www.github.com/raymondxu/javaworkshop"><img src="img/java.png" class="card-image"></a>
-          </div>
-          <div class="card-details-container">
-            <div class="card-title"><a href="https://www.github.com/raymondxu/javaworkshop" class="link">Intermediate Java</a></div>
-            <div class="card-desc">This workshop functions as a supplement to a typical introductory computer science course. It covers Java variable concepts, abstraction, and concludes with a splash of design patterns.</div>
+            <div class="card-desc">I co-authored this original curriculum for DevFest, <a href="https://adicu.com" class="underlined-link" target="_blank">ADI</a>'s week-long workshop series and hackathon. This comprehensive tutorial teaches web development by guiding students through the process of building a reading list app using Flask. Read more about the DevFest Track System and its educational methodology <a href="https://medium.com/stories-from-adi/rethinking-education-at-devfest-d5fac7c303be" class="underlined-link" target="_blank">here</a></div>
           </div>
         </div>
       </div>
