--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
 
   <title>Raymond Xu</title>
   <meta name="author" content="Raymond Xu">
-  <meta name="description" content="Software Engineer at Lyft. Previously CS at Columbia, Education at ADI.">
+  <meta name="description" content="Software Engineer at Notion. Previously at Lyft, Google, Columbia, ADI.">
 
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="Raymond Xu">
-  <meta itemprop="description" content="Software Engineer at Lyft. Previously CS at Columbia, Education at ADI.">
+  <meta itemprop="description" content="Software Engineer at Notion. Previously at Lyft, Google, Columbia, ADI.">
   <meta itemprop="image" content="https://raymondxu.io/img/landing.png">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://www.raymondxu.io">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Raymond Xu">
-  <meta property="og:description" content="Software Engineer at Lyft. Previously CS at Columbia, Education at ADI.">
+  <meta property="og:description" content="Software Engineer at Notion. Previously at Lyft, Google, Columbia, ADI.">
   <meta property="og:image" content="https://raymondxu.io/img/landing.png">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Raymond Xu">
-  <meta name="twitter:description" content="Software Engineer at Lyft. Previously CS at Columbia, Education at ADI.">
+  <meta name="twitter:description" content="Software Engineer at Notion. Previously at Lyft, Google, Columbia, ADI.">
   <meta name="twitter:image" content="https://raymondxu.io/img/landing.png">
 
   <!-- Stylesheets -->
@@ -80,6 +80,13 @@
         <div class="container">
           <div class="event">
             <div class="event-image-container">
+              <a href="https://www.notion.so/product" target="_blank"><img class="event-image" alt="notion" src="img/notion.png"></a>
+            </div>
+            <div class="event-description"><p>Software Engineer</p><p class="event-date">2023 - Present</p>
+            </div>
+          </div>
+          <div class="event">
+            <div class="event-image-container">
               <a href="https://www.lyft.com" target="_blank"><img class="event-image" alt="lyft" src="img/lyft.jpg"></a>
             </div>
             <div class="event-description"><p>Software Engineer</p><p class="event-date">2017 - 2023</p>
@@ -87,17 +94,10 @@
           </div>
           <div class="event">
             <div class="event-image-container">
-              <a href="https://www.cs.columbia.edu" target="_blank"><img class="event-image" alt="columbia" src="img/seas.png"></a>
+              <a href="http://raymondxu.io/dp.pdf" target="_blank"><img class="event-image" alt="algorithms" src="img/algo.png"></a>
             </div>
-            <div class="event-description"><p>B.S. Computer Science</p><p class="event-date">2014 - 2018</p>
+            <div class="event-description"><p>Teaching Assistant</p><p class="event-date">2017</p>
             </div>
-          </div>
-          <div class="event">
-              <div class="event-image-container">
-                <a href="https://csorw4231-14.wikischolars.columbia.edu/Spring+2017" target="_blank"><img class="event-image" alt="algorithms" src="img/algo.png"></a>
-              </div>
-              <div class="event-description"><p>Teaching Assistant</p><p class="event-date">2017</p>
-              </div>
           </div>
           <div class="event">
             <div class="event-image-container">
@@ -115,7 +115,7 @@
           </div>
           <div class="event">
             <div class="event-image-container">
-              <a href="https://adicu.com" target="_blank"><img class="event-image" alt="devfest" src="img/devfest.png"></a>
+              <a href="https://medium.com/stories-from-adi/rethinking-education-at-devfest-d5fac7c303be" target="_blank"><img class="event-image" alt="devfest" src="img/devfest.png"></a>
             </div>
             <div class="event-description"><p>Director</p><p class="event-date">2015 - 2017</p>
             </div>
@@ -137,10 +137,10 @@
 
         <div class="card">
           <div class="card-image-container">
-            <a href="https://chrome.google.com/webstore/detail/snoozer/mhepbnfcmeddaoldehjcamapgjbjcfhi"><img src="img/snoozer.png" class="card-image"></a>
+            <img src="img/snoozer.png" class="card-image">
           </div>
           <div class="card-details-container">
-            <div class="card-title"><a href="https://chrome.google.com/webstore/detail/snoozer/mhepbnfcmeddaoldehjcamapgjbjcfhi" class="link">Snoozer</a></div>
+            <div class="card-title">Snoozer</div>
             <div class="card-desc">Snoozer is a Chrome extension that lets you snooze conversations on messenger.com.</div>
           </div>
         </div>
@@ -157,10 +157,10 @@
 
         <div class="card">
           <div class="card-image-container">
-            <a href="http://density.adicu.com"><img src="img/density.png" class="card-image"></a>
+            <a href="https://github.com/ADI-Labs/density"><img src="img/density.png" class="card-image"></a>
           </div>
           <div class="card-details-container">
-            <div class="card-title"><a href="https://density.adicu.com" class="link">Density</a></div>
+            <div class="card-title"><a href="https://github.com/ADI-Labs/density" class="link">Density</a></div>
             <div class="card-desc">Density is a Flask app that estimates how full study spaces around campus are using Wi-Fi data. Developed with a team in <a href="https://www.adicu.com/adi-labs" class="underlined-link" target="_blank">ADI Labs</a>.</div>
           </div>
         </div>
@@ -185,16 +185,6 @@
           <div class="card-details-container">
             <div class="card-title"><a href="http://raymondxu.io/dp.pdf" class="link">Dynamic Programming</a></div>
             <div class="card-desc">As a TA for <a href="https://csorw4231-14.wikischolars.columbia.edu/" class="underlined-link" target="_blank"> Analysis of Algorithms I</a>, I gave this review lecture on dynamic programming to help prepare students for the midterm exam.</div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-image-container">
-            <a href="http://raymondxu.io/wgc.pdf"><img src="img/wgc.png" class="card-image"></a>
-          </div>
-          <div class="card-details-container">
-            <div class="card-title"><a href="http://raymondxu.io/wgc.pdf" class="link">Writing Good Code</a></div>
-            <div class="card-desc">This talk teaches principles of effective software development that aren't emphasized in college coursework. In it, I explain why code style, design patterns, and testing are important for writing maintainable code, and introduce relevant tools such as linters and testing frameworks.</div>
           </div>
         </div>
 
@@ -245,7 +235,6 @@
           <a href="mailto:mail@raymondxu.io?Subject=Hello!" target="_top"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
           <a href="https://www.medium.com/@raymondxu" target="_blank"><i class="fa fa-medium fa-2x" aria-hidden="true"></i></a>
           <a href="https://www.github.com/RaymondXu" target="_blank"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a>
-          <a href="https://www.facebook.com/RayXu" target="_blank"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a>
           <a href="https://www.linkedin.com/pub/raymond-xu/65/303/b58" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
         </div>
       </div>
