--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
 
   <meta charset="utf-8">
-  <meta name="robots" content="NOODP, index, follow" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://www.raymondxu.io/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
   <title>Raymond Xu</title>
@@ -17,20 +18,46 @@
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="Raymond Xu">
   <meta itemprop="description" content="Software Engineer at Notion. Previously at Lyft, Google, Columbia, ADI.">
-  <meta itemprop="image" content="https://raymondxu.io/img/landing.png">
+  <meta itemprop="image" content="https://www.raymondxu.io/img/landing.png">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://www.raymondxu.io">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Raymond Xu">
   <meta property="og:description" content="Software Engineer at Notion. Previously at Lyft, Google, Columbia, ADI.">
-  <meta property="og:image" content="https://raymondxu.io/img/landing.png">
+  <meta property="og:image" content="https://www.raymondxu.io/img/landing.png">
+  <meta property="og:image:width" content="2996">
+  <meta property="og:image:height" content="1526">
+  <meta property="og:site_name" content="Raymond Xu">
+  <meta property="og:locale" content="en_US">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Raymond Xu">
   <meta name="twitter:description" content="Software Engineer at Notion. Previously at Lyft, Google, Columbia, ADI.">
-  <meta name="twitter:image" content="https://raymondxu.io/img/landing.png">
+  <meta name="twitter:image" content="https://www.raymondxu.io/img/landing.png">
+  <meta name="twitter:image:alt" content="Raymond Xu personal site preview">
+  
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Raymond Xu",
+      "jobTitle": "Staff Software Engineer",
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Notion"
+      },
+      "url": "https://www.raymondxu.io/",
+      "image": "https://www.raymondxu.io/img/landing.png",
+      "sameAs": [
+        "https://www.linkedin.com/pub/raymond-xu/65/303/b58",
+        "https://www.github.com/RaymondXu",
+        "https://instagram.com/_raymondxu"
+      ]
+    }
+  </script>
 
   <!-- Stylesheets -->
   <link href="css/base.css" rel="stylesheet" type="text/css">
