--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://www.raymondxu.io/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <meta name="theme-color" content="#F7F7F7">
 
   <title>Raymond Xu</title>
   <meta name="author" content="Raymond Xu">
