--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <h1>Raymond Xu</h1>
 
       <div class="caption">
-          Staff Software Engineer at <a href="https://www.notion.so/product" target="_blank">Notion</a>, based in NY.
+          Staff Software Engineer at <a href="https://www.notion.com/blog/how-we-made-notion-available-offline" target="_blank">Notion</a>, based in NY.
           <br><br>
           Formerly, founding engineer on <a href="https://www.lyft.com/blog/posts/lyfts-secret-plan-to-take-control-of-its-maps-and-its-future" target="_blank">Lyft's Navigation team</a>, helping bring the product from 0 to 1. Previously, CS at Columbia, <a href="http://raymondxu.io/systems.pdf" target="_blank">education head</a> at <a href="https://adicu.com" target="_blank">ADI</a>, <a href="https://medium.com/stories-from-adi/rethinking-education-at-devfest-d5fac7c303be" target="_blank">hackathon director</a>, and <a href="http://raymondxu.io/dp.pdf" target="_blank">Algorithms TA</a>.
       </div>
